# smartLoan

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mlflow.db  pyproject.toml  temp.py
Interview_prep/: SmartLoan_FastAPI_Report.docx  SmartLoan_Model_Report.docx  SmartLoan_Prediction_Report.docx  smartloan_data_pipeline_report.docx
src/smartLoan/api/: main.py  ui.py
src/smartLoan/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_prediction.py  model_training.py
src/smartLoan/config/: paths.py  settings.py
src/smartLoan/pipeline/: prediction_pipeline.py  training_pipeline.py
src/smartLoan/schemas/: request_schema.py
src/smartLoan/utils/: common.py  exceptions.py  logger.py
