[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartloan"
version = "0.1.0"
description = "Production-grade ML system with full MLOps lifecycle"
authors = [
    { name = "gourav", email = "gouravkcc1@gmail.com" }
]

requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "imblearn",
    "imbalanced-learn",
    "lightgbm",
    "xgboost",
    "joblib",
    "matplotlib",
    "seaborn",
    "mlflow",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic>=2",
    "pydantic-settings",
    "python-dotenv",
    "kaggle",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]